k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/python(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-backend-svc
            port:
              number: 80
      - path: /api/java(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: java-backend-svc
            port:
              number: 80
      - path: /(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-frontend-svc
            port:
              number: 80
